--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.sicredi</groupId>
 	<artifactId>SincronizacaoReceita</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>SincronizacaoReceita</name>
 	<description>Teste</description>
 
